implement detailed monitoring configuration

--- a/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/alinux2.batch.no_head_node_log.yaml
+++ b/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/alinux2.batch.no_head_node_log.yaml
@@ -45,7 +45,7 @@ SharedStorage:
     EbsSettings:
       VolumeType: st1
 Monitoring:
-  DetailedMonitoring: true
+  EnableDetailedMonitoring: true
   Logs:
     CloudWatch:
       Enabled: false
