--- a/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/ubuntu18.slurm.no_dashboard.yaml
+++ b/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/ubuntu18.slurm.no_dashboard.yaml
@@ -59,7 +59,7 @@ SharedStorage:
     EbsSettings:
       VolumeType: gp2
 Monitoring:
-  DetailedMonitoring: false
+  EnableDetailedMonitoring: false
   Logs:
     CloudWatch:
       Enabled: true
