--- a/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_1.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_1.yaml
@@ -188,7 +188,7 @@ Iam:
   Roles:
     LambdaFunctionsRole: String  # arn:aws:iam::aws:role/CustomResourcesLambdaRole
 Monitoring:
-  DetailedMonitoring: true  # false
+  EnableDetailedMonitoring: true  # false
   Logs:
     CloudWatch:
       Enabled: true  # true
