--- a/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/centos7.slurm.full.yaml
+++ b/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/centos7.slurm.full.yaml
@@ -96,7 +96,7 @@ SharedStorage:
       StorageCapacity: 1200
       WeeklyMaintenanceStartTime: "1:00:00"
 Monitoring:
-  DetailedMonitoring: true
+  EnableDetailedMonitoring: true
   Logs:
     CloudWatch:
       Enabled: true
