--- a/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/ubuntu18.slurm.simple.yaml
+++ b/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/ubuntu18.slurm.simple.yaml
@@ -29,7 +29,7 @@ Scheduling:
         - Name: compute_resource2
           InstanceType: c4.2xlarge
 Monitoring:
-  DetailedMonitoring: true
+  EnableDetailedMonitoring: true
   Logs:
     CloudWatch:
       Enabled: true
