--- a/tests/integration-tests/tests/dashboard_and_alarms/test_dashboard_and_alarms/test_dashboard_and_alarms/pcluster.config.yaml
+++ b/tests/integration-tests/tests/dashboard_and_alarms/test_dashboard_and_alarms/test_dashboard_and_alarms/pcluster.config.yaml
@@ -27,7 +27,7 @@ Scheduling:
           MinCount: 1
           {% endif %}
 Monitoring:
-  DetailedMonitoring: true
+  EnableDetailedMonitoring: true
   Logs:
     CloudWatch:
       Enabled: {{ cw_log_enabled }}
