Override Queue level Tags over Cluster level tags
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_1.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_1.yaml
@@ -80,6 +80,11 @@ Scheduling:
             EnableWriteAccess: False
         AdditionalIamPolicies:
           - Policy: arn:aws:iam::aws:policy/AdministratorAccess
+      Tags:
+        - Key: queue_tag1
+          Value: String
+        - Key: queue_tag2
+          Value: String
     - Name: queue2
       ComputeSettings:
         LocalStorage:
