Add Tags at compute resource level
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/cli/tests/pcluster/templates/test_cluster_stack/test_cluster_config_limits/slurm.full.all_resources.yaml
+++ b/cli/tests/pcluster/templates/test_cluster_stack/test_cluster_config_limits/slurm.full.all_resources.yaml
@@ -78,6 +78,11 @@ Scheduling:
         {% for j in range(max_number_of_ondemand_crs) %}
         - Name: compute-resource-ondemand-{{ i }}{{ j }}
           InstanceType: c5.xlarge
+          Tags:
+            {% for i in range(number_of_tags) %}
+            - Key: computetag{{ i }}
+              Value: computetag{{ i }}
+            {% endfor %}
         {% endfor %}
       CustomActions:
         OnNodeStart:
@@ -148,6 +153,11 @@ Scheduling:
             PlacementGroup:
               Enabled: true
               Id: String
+          Tags:
+            {% for i in range(number_of_tags) %}
+            - Key: computetag{{ i }}
+              Value: computetag{{ i }}
+            {% endfor %}
         {% endfor %}
       Iam:
         InstanceProfile: arn:aws:iam::aws:instance-profile/CustomNodeInstanceProfile
