--- a/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_1.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_1.yaml
@@ -107,6 +107,11 @@ Scheduling:
       ComputeResources:
         - Name: compute_resource_1
           InstanceType: c4.2xlarge
+          Tags:
+            - Key: compute_tag1
+              Value: String
+            - Key: compute_tag2
+              Value: String
         - Name: compute_resource_2
           InstanceType: c5.2xlarge
           MinCount: 1
