--- a/cli/tests/pcluster/validators/test_all_validators/test_slurm_validators_are_called_with_correct_argument/slurm.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_slurm_validators_are_called_with_correct_argument/slurm.yaml
@@ -20,6 +20,11 @@ Scheduling:
       ComputeResources:
         - Name: compute_resource1
           InstanceType: t2.large
+          Tags:
+            - Key: compute_tag1
+              Value: String
+            - Key: compute_tag2
+              Value: String
         - Name: compute_resource2
           InstanceType: c4.2xlarge
     - Name: queue2
