--- a/cli/tests/pcluster/config/test_config_patch/test_single_param_change/pcluster.config.yaml
+++ b/cli/tests/pcluster/config/test_config_patch/test_single_param_change/pcluster.config.yaml
@@ -31,6 +31,11 @@ Scheduling:
           InstanceType: {{compute_instance_type}}
           MinCount: 1
           MaxCount: {{max_count}}
+          {% if compute_tag_value %}
+          Tags:
+            - Key: computetag1
+              Value: {{compute_tag_value}}
+          {% endif %}
       Image:
         CustomAmi: {{queue_custom_ami}}
       {% if queue_tag_value %}
