--- a/cli/tests/pcluster/example_configs/awsbatch.full.yaml
+++ b/cli/tests/pcluster/example_configs/awsbatch.full.yaml
@@ -92,7 +92,7 @@ Iam:
   Roles:
     LambdaFunctionsRole: arn:aws:iam::aws:role/CustomResourcesLambdaRole
 Monitoring:
-  EnableDetailedMonitoring: true
+  DetailedMonitoring: true
   Logs:
     CloudWatch:
       Enabled: true
