--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -196,7 +196,7 @@ Iam:
   Roles:
     LambdaFunctionsRole: String  # arn:aws:iam::aws:role/CustomResourcesLambdaRole
 Monitoring:
-  EnableDetailedMonitoring: true  # false
+  DetailedMonitoring: true  # false
   Logs:
     CloudWatch:
       Enabled: true  # true
