Add redhat8 update cluster integration tests in develop
This patch adds rhel8 to the common cluster update integration tests in develop,
except for the awsbatch one, since awsbatch is not supported in rhel8, and the
multi-az one, since our ocr_stack class-scoped fixture has hardcoded
'Linux/UNIX' as platform, while rhel8 required 'Red Hat Enterprise Linux'.

If in a follow up patch we decide to set the platform value conditionally based
on the operating system, we ought to pay attention to what happens when running
this tests for, i.e., alinux2 and rhel8, since this fixture is shared (class
level scope) and the two OSs require different platform values.

--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -774,23 +774,23 @@ update:
     dimensions:
       - regions: ["eu-central-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86_NO_RHEL8 }}
+        oss: {{ common.OSS_COMMERCIAL_X86 }}
   test_update.py::test_update_compute_ami:
     dimensions:
       - regions: ["eu-west-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
+        oss: ["rhel8"]
   test_update.py::test_update_instance_list:
     dimensions:
       - regions: ["ap-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
+        oss: ["rhel8"]
         schedulers: ["slurm"]
   test_update.py::test_queue_parameters_update:
     dimensions:
       - regions: ["ap-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
+        oss: ["rhel8"]
         schedulers: ["slurm"]
   test_update.py::test_dynamic_file_systems_update:
     dimensions:
