--- a/tests/integration-tests/tests/scaling/test_scaling/test_multiple_jobs_submission/pcluster.config.yaml
+++ b/tests/integration-tests/tests/scaling/test_scaling/test_multiple_jobs_submission/pcluster.config.yaml
@@ -18,7 +18,8 @@ Scheduling:
     ScaledownIdletime: {{ scaledown_idletime }}
     {% endif %}
   {{ scheduler_prefix }}Queues:
-    - Name: queue-0
+  {% for q in range(no_of_queues) %}
+    - Name: queue-{{q}}
       ComputeResources:
         - Name: compute-resource-0
           Instances:
@@ -26,3 +27,4 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ public_subnet_id }}
+  {% endfor %}
