--- a/tests/integration-tests/tests/pcluster_api/test_api/test_cluster_slurm/pcluster.config.yaml
+++ b/tests/integration-tests/tests/pcluster_api/test_api/test_cluster_slurm/pcluster.config.yaml
@@ -6,6 +6,38 @@ HeadNode:
     SubnetId: {{ public_subnet_id }}
   Ssh:
     KeyName: {{ key_name }}
+  Iam:
+    S3Access:
+      - BucketName: {{ bucket_name }}
+        EnableWriteAccess: true
+  CustomActions:
+    OnNodeStart:
+      Sequence:
+        {% for item in on_node_start_script_sequence %}
+        - Args:
+            {% for arg in item.args %}
+            - {{ arg }}
+            {% endfor %}
+          Script: {{ item.script }}
+        {% endfor %}
+    OnNodeConfigured:
+      Sequence:
+        {% for item in on_node_configured_script_sequence %}
+        - Args:
+            {% for arg in item.args %}
+            - {{ arg }}
+            {% endfor %}
+          Script: {{ item.script }}
+        {% endfor %}
+    OnNodeUpdated:
+      Sequence:
+        {% for item in on_node_updated_script_sequence %}
+        - Args:
+            {% for arg in item.args %}
+            - {{ arg }}
+            {% endfor %}
+          Script: {{ item.script }}
+        {% endfor %}
 Scheduling:
   Scheduler: {{ scheduler }}
   SlurmSettings:
