Change instance type for multiple_nics tests and execute for develop and released
To verify multiple-nics functionality we don't need to use p4d.24xlarge,
we can use any instance type with multiple network cards.
See full list here: https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-eni.html#network-cards

Then with this patch we're adding the execution of multi-nics tests
on both develop and released configuration files.

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -727,14 +727,13 @@ update:
       - regions: [ "eu-west-2" ]
         schedulers: [ "slurm" ]
         oss: ["alinux2"]
-# Temporarily disabling p4d tests
-# multiple_nics:
-#   test_multiple_nics.py::test_multiple_nics:
-#     dimensions:
-#       - regions: ["use1-az6"]  # do not move, unless capacity reservation is moved as well
-#         instances: ["p4d.24xlarge"]
-#         oss: {{ common.OSS_COMMERCIAL_X86 }}
-#         schedulers: ["slurm"]
+multiple_nics:
+  test_multiple_nics.py::test_multiple_nics:
+    dimensions:
+      - regions: ["use1-az6"]
+        instances: ["c6in.32xlarge"]
+        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        schedulers: ["slurm"]
 resource_bucket:
   test_resource_bucket.py::test_resource_bucket:
     dimensions:
@@ -753,3 +752,4 @@ log_rotation:
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
         oss: ["alinux2"]
         schedulers: ["slurm"]
+
