Reduce tests by redistributing region dimension
* test_awsbatch.py redistributed regions between awsbatch tests: 7 -> 3
* test_slurm_accounting.py::test_slurm_accounting: 2 -> 1

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -404,7 +404,7 @@ scaling:
 schedulers:
   test_awsbatch.py::test_awsbatch:
     dimensions:
-      - regions: ["eu-north-1", "us-gov-west-1", "cn-north-1"]
+      - regions: ["us-gov-west-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["alinux2"]
         schedulers: ["awsbatch"]
@@ -414,7 +414,7 @@ schedulers:
         schedulers: ["awsbatch"]
   test_awsbatch.py::test_awsbatch_defaults:
     dimensions:
-      - regions: ["eu-north-1", "us-gov-west-1", "cn-north-1"]
+      - regions: ["cn-north-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["alinux2"]
         schedulers: ["awsbatch"]
@@ -502,7 +502,7 @@ schedulers:
         schedulers: ["slurm"]
   test_slurm_accounting.py::test_slurm_accounting:
     dimensions:
-      - regions: ["us-east-1", "ap-south-1"]
+      - regions: ["ap-south-1"]
         instances:  {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["ubuntu2004"]
         schedulers: ["slurm"]
