--- a/tests/integration-tests/configs/redhat8.yaml
+++ b/tests/integration-tests/configs/redhat8.yaml
@@ -1,7 +1,4 @@
 {%- import 'common.jinja2' as common with context -%}
-{%- set OSS_COMMERCIAL_X86_RH8 = ["alinux2", "centos7", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
-{%- set OSS_COMMERCIAL_ARM_RH8 = ["alinux2", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
-{%- set OSS_ONE_PER_DISTRO_RH8 = ["centos7", "alinux2", "ubuntu1804", "rhel8"] -%}
 
 ---
 test-suites:
@@ -17,7 +14,7 @@ test-suites:
       dimensions:
         - regions: ["ap-southeast-2"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ OSS_COMMERCIAL_X86_RH8 }}
+          oss: {{ OSS_COMMERCIAL_X86 }}
           schedulers: ["slurm"]
           benchmarks:
             - mpi_variants: [ "openmpi", "intelmpi" ]
@@ -70,7 +67,7 @@ test-suites:
       dimensions:
         - regions: ["af-south-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ OSS_ONE_PER_DISTRO_RH8 }}
+          oss: {{ OSS_ONE_PER_DISTRO }}
           schedulers: ["slurm"]
   createami:
     test_createami.py::test_build_image:
@@ -115,7 +112,7 @@ test-suites:
       dimensions:
         - regions: ["af-south-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ OSS_COMMERCIAL_X86_RH8 }}
+          oss: {{ OSS_COMMERCIAL_X86 }}
           schedulers: ["slurm"]
   efa:
     test_efa.py::test_efa:
@@ -152,7 +149,7 @@ test-suites:
           # S3 bucket belonging to the same region and S3 VPC Endpoints only work within the region.
         - regions: ["us-east-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ OSS_COMMERCIAL_X86_RH8 }}
+          oss: {{ OSS_COMMERCIAL_X86 }}
           schedulers: ["slurm"]
     test_multi_cidr.py::test_multi_cidr:
       dimensions:
@@ -195,13 +192,13 @@ test-suites:
       dimensions:
         - regions: ["eu-north-1"]
           instances: {{ common.INSTANCES_DEFAULT_ARM }}
-          oss: {{ OSS_COMMERCIAL_ARM_RH8 }}
+          oss: {{ OSS_COMMERCIAL_ARM }}
           schedulers: ["slurm"]
     test_mpi.py::test_mpi_ssh:
       dimensions:
         - regions: ["eu-north-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ OSS_COMMERCIAL_X86_RH8 }}
+          oss: {{ OSS_COMMERCIAL_X86 }}
           schedulers: ["slurm"]
   schedulers:
     test_awsbatch.py::test_awsbatch:
@@ -220,17 +217,17 @@ test-suites:
       dimensions:
         - regions: ["ap-south-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ OSS_COMMERCIAL_X86_RH8 }}
+          oss: {{ OSS_COMMERCIAL_X86 }}
           schedulers: ["slurm"]
         - regions: ["ap-southeast-1"]
           instances: {{ common.INSTANCES_DEFAULT_ARM }}
-          oss: {{ OSS_COMMERCIAL_ARM_RH8 }}
+          oss: {{ OSS_COMMERCIAL_ARM }}
           schedulers: ["slurm"]
     test_slurm.py::test_slurm_scaling:
       dimensions:
         - regions: ["us-west-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ OSS_ONE_PER_DISTRO_RH8 }}
+          oss: {{ OSS_ONE_PER_DISTRO }}
           schedulers: ["slurm"]
   storage:
     # Commercial regions that can't test FSx: ap-northeast-1, ap-southeast-1, ap-southeast-2, eu-central-1, eu-north-1, eu-west-1, eu-west-2, us-east-1, us-east-2, us-west-1, us-west-2
@@ -250,7 +247,7 @@ test-suites:
       dimensions:
         - regions: ["eu-west-2"]
           instances: {{ common.INSTANCES_DEFAULT_ARM }}
-          oss: {{ OSS_COMMERCIAL_ARM_RH8 }}
+          oss: {{ OSS_COMMERCIAL_ARM }}
           schedulers: ["slurm"]
           benchmarks:
             - mpi_variants: [ "openmpi", "intelmpi" ]
@@ -274,7 +271,7 @@ test-suites:
       dimensions:
         - regions: [ "ca-central-1" ]
           instances: {{ common.INSTANCES_DEFAULT_ARM }}
-          oss: {{ OSS_COMMERCIAL_ARM_RH8 }}
+          oss: {{ OSS_COMMERCIAL_ARM }}
           schedulers: [ "slurm" ]
           benchmarks:
             - mpi_variants: [ "openmpi", "intelmpi" ]
@@ -286,7 +283,7 @@ test-suites:
       dimensions:
         - regions: ["ap-south-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ OSS_COMMERCIAL_X86_RH8 }}
+          oss: {{ OSS_COMMERCIAL_X86 }}
           schedulers: ["slurm"]
     test_ebs.py::test_ebs_multiple:
       dimensions:
