--- a/tests/integration-tests/tests/tags/test_tag_propagation/test_tag_propagation/pcluster.config.update.queue_update.yaml
+++ b/tests/integration-tests/tests/tags/test_tag_propagation/test_tag_propagation/pcluster.config.update.queue_update.yaml
@@ -17,42 +17,30 @@ HeadNode:
     Secured: {{ imds_secured }}
 Scheduling:
   Scheduler: {{ scheduler }}
-  {% if scheduler == "awsbatch" %}
-  AwsBatchQueues:
-    - Name: queue-0
-      ComputeResources:
-        - Name: compute-resource-0
-          InstanceTypes:
-            - {{ instance }}
-          MinvCpus: 4
-          DesiredvCpus: 4
-      Networking:
-        SubnetIds:
-          - {{ private_subnet_id }}
-  {% else %}
+  SlurmSettings:
+    QueueUpdateStrategy: DRAIN
   SlurmQueues:
     - Name: queue-0
       ComputeResources:
-        - Name: compute-resource-0
+        - Name: compute-resource-1
           Instances:
             - InstanceType: {{ instance }}
           MinCount: 1
           Tags:
-            - Key: ComputeResourceTag
-              Value: ComputeResourceValue
+            - Key: ComputeResourceTagUpdate
+              Value: ComputeResourceValueUpdate
             - Key: ComputeOverrideTag
-              Value: ComputeLevelValue
+              Value: ComputeLevelValueUpdate
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
       Tags:
-        - Key: QueueTag
-          Value: QueueValue
+        - Key: QueueTagUpdate
+          Value: QueueValueUpdate
         - Key: QueueOverrideTag
-          Value: QueueLevelValue
+          Value: QueueLevelValueUpdate
         - Key: ComputeOverrideTag
-          Value: QueueLevelValue
-  {% endif %}
+          Value: QueueLevelValueUpdate
 SharedStorage:
   - MountDir: /shared
     Name: {{ volume_name }}
