--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -171,13 +171,15 @@ createami:
         schedulers: ["slurm"]
         oss: ["alinux2"]
   test_createami.py::test_build_image_custom_components:
+    # Test arn custom component with combination (eu-west-1, m6g.xlarge, alinux2)
+    # Test script custom component with combination (ap-southeast-2, c5.xlarge, ubuntu2004)
     dimensions:
       - regions: ["eu-north-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["rhel8"]
+        oss: ["ubuntu2004"]
       - regions: ["eu-west-1"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: ["centos7"]
+        oss: ["alinux2"]
   test_createami.py::test_build_image_wrong_pcluster_version:
     dimensions:
       - regions: ["ca-central-1"]
