Remove awsbatch from cluster creation timeout test
Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -141,7 +141,7 @@ create:
     dimensions:
       - regions: ["ap-northeast-2"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        schedulers: ["slurm", "awsbatch"]
+        schedulers: ["slurm"]
         oss: ["alinux2"]
   test_create.py::test_cluster_creation_with_invalid_ebs:
     dimensions:
