[Permissions] Add action 'cloudformation:ListStacks' to ParallelClusterClusterPolicy in parallelcluster-policies.yaml.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/cloudformation/policies/parallelcluster-policies.yaml
+++ b/cloudformation/policies/parallelcluster-policies.yaml
@@ -419,6 +419,7 @@ Resources:
               - cloudformation:DescribeStackEvents
               - cloudformation:DescribeStackResources
               - cloudformation:GetTemplate
+              - cloudformation:ListStacks
             Resource: !Sub
               - arn:*:cloudformation:${RequestedRegion}:${AWS::AccountId}:stack/*
               - RequestedRegion: !If [IsMultiRegion, '*', !Ref Region]
