`[cloudformation/custom_resource]` Update the 1-click suffix for VPC … (#5270)
* `[cloudformation/custom_resource]` Update the 1-click suffix for VPC stack.

* `[integ-tests/custom_resource]` Add test for cluster-1-click.yaml

* `[cloudformation/cluster-1-click]` Add SSM to the 1-click cluster.

--- a/cloudformation/custom_resource/cluster-1-click.yaml
+++ b/cloudformation/custom_resource/cluster-1-click.yaml
@@ -20,6 +20,8 @@ Mappings:
 
 Conditions:
   UseCustomBucket: !Not [!Equals [!FindInMap [ParallelCluster, Constants, Bucket], '']]
+  GovCloud: !Equals [!Ref AWS::Partition, 'aws-us-gov']
+  China: !Equals [!Ref AWS::Partition, 'aws-cn']
 
 Resources:
   PclusterClusterProvider:
@@ -27,6 +29,7 @@ Resources:
     Properties:
       Parameters:
         CustomBucket: !If [ UseCustomBucket, !FindInMap [ParallelCluster, Constants, Bucket], !Ref AWS::NoValue ]
+        AdditionalIamPolicies: !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore
       TemplateURL: !Sub
         - https://${Bucket}.s3.${AWS::Region}.${AWS::URLSuffix}/parallelcluster/${Version}/templates/custom_resource/cluster.yaml
         - { Version: !FindInMap [ParallelCluster, Constants, Version ],
@@ -41,7 +44,7 @@ Resources:
         PrivateCIDR: 10.0.16.0/20
         AvailabilityZone: !Ref AvailabilityZone
       TemplateURL: !Sub
-        - https://${Bucket}.s3.${AWS::Region}.${AWS::URLSuffix}.com/parallelcluster/${Version}/templates/networking/public-private-${Version}.cfn.json
+        - https://${Bucket}.s3.${AWS::Region}.${AWS::URLSuffix}/parallelcluster/${Version}/templates/networking/public-private-${Version}.cfn.json
         - { Version: !FindInMap [ParallelCluster, Constants, Version],
             Bucket: !If [ UseCustomBucket, !FindInMap [ParallelCluster, Constants, Bucket], !Sub "${AWS::Region}-aws-parallelcluster" ]
           }
@@ -66,6 +69,9 @@ Resources:
             SubnetId: !GetAtt [ PclusterVpc, Outputs.PublicSubnetId ]
           Ssh:
             KeyName: !Ref KeyName
+          Iam:
+            AdditionalIamPolicies:
+              - Policy: !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore
         Scheduling:
           Scheduler: slurm
           SlurmQueues:
@@ -81,6 +87,13 @@ Outputs:
   HeadNodeIp:
     Description: The Public IP address of the HeadNode
     Value: !GetAtt [ PclusterCluster, headNode.publicIpAddress ]
+  SystemManagerUrl:
+    Description: URL to access the HeadNode via SystemManager
+    Value: !Sub
+      - https://${ConsoleDomain}/systems-manager/session-manager/${InstanceId}?region=${AWS::Region}
+      - { ConsoleDomain: !If [ GovCloud, 'console.amazonaws-us-gov.com', !If [ China, 'console.amazonaws.cn', !Sub '${AWS::Region}.console.aws.amazon.com']],
+          InstanceId: !GetAtt [ PclusterCluster, headNode.instanceId ]
+        }
   ValidationMessages:
     Description: Any warnings from cluster create or update operations.
     Value: !GetAtt PclusterCluster.validationMessages
